feat: 홍보센터 완료

--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -207,13 +207,14 @@
                                 </button>
                             </li>
                             <li class="inner_tab_item">
-                                <button type="button" class="inner_tab_btn"
+                                <btton type="button" class="inner_tab_btn"
                                         id="tab-btn-catalog"
                                         data-target="panel-catalog"
                                         role="tab"
                                         aria-selected="false">
+
                                     <span>카탈로그</span>
-                                </button>
+                                </b tton>
                             </li>
                             <li class="inner_tab_item">
                                 <button type="button" class="inner_tab_btn"
@@ -569,6 +570,115 @@
 
             <!-- 카탈로그 패널 -->
             <section id="panel-catalog" class="inner_tab_panel">
+                <div class="pr_list_section pr_list_section--catalog js-more-wrap"
+                     data-more-step="6">
+                    <!-- 카탈로그 리스트-->
+                    <ul class="catalog-list">
+                        <li class="catalog-item js-more-item">
+                            <div class="pr_item_category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요. 홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                        <li class="catalog-item js-more-item">
+                            <div class="catalog-category">카탈로그</div>
+                            <h3 class="pr_item_title">홍보센터의 자료실입니다. 카탈로그를 다운받으세요.</h3>
+                            <div class="catalog-info">
+                                <span class="info-type">PDF</span>
+                                <span class="info-type">Korean</span>
+                                <span class="info-size">2.40MB</span>
+                            </div>
+                            <button class="download-button" data-file="catalog5.pdf">
+                                <span>카탈로그 다운로드</span>
+                            </button>
+                        </li>
+                    </ul>
+                    <!-- 더보기 버튼 -->
+                    <div class="pr_list_more">
+                        <button type="button"
+                                class="btn_more js-more-btn">
+                            <span>더 보기</span>
+                        </button>
+                    </div>
+                </div>
             </section>
 
             <!-- 뉴스 패널 -->
@@ -837,9 +947,7 @@
 </div>
 </body>
 <script>
-  /* -----------------------------
-     공통: 리스트 더보기
-    --------------------------- */
+  /*  공통: 리스트 더보기  */
   $('.js-more-wrap').each(function () {
     const $wrap = $(this);
     const $items = $wrap.find('.js-more-item');
@@ -850,18 +958,15 @@
     const step = parseInt($wrap.data('more-step'), 10) || 5;
     let shown = step;
 
-    // 처음 상태 세팅
     $items.hide().slice(0, shown).show();
 
-    // 처음부터 전체 개수보다 적으면 "영역 전체" 숨김
+    // 처음부터 전체 개수보다 적으면 영역 숨김
     if (shown >= $items.length) {
-      $moreArea.hide();   // ← $btn.hide() 말고 이걸로!
+      $moreArea.hide();
     }
 
-    // 더보기 클릭
     $btn.on('click', function (e) {
       e.preventDefault();
-
       shown += step;
       $items.slice(0, shown).fadeIn(200);
 
@@ -871,5 +976,40 @@
       }
     });
   });
+
+  /*  페이지 로드 완료 후 이벤트 리스너 등록  */
+  document.addEventListener('DOMContentLoaded', function () {
+    // 모든 다운로드 버튼 선택
+    const downloadButtons = document.querySelectorAll('.download-button');
+
+    // 각 버튼에 클릭 이벤트 리스너 등록
+    downloadButtons.forEach(button => {
+      button.addEventListener('click', function () {
+        // data-file 속성에서 파일명 가져오기
+        const filename = this.getAttribute('data-file');
+        downloadFile(filename);
+      });
+    });
+  });
+
+  /**
+   * 파일 다운로드 함수
+   * @param {string} filename - 다운로드할 파일명
+   */
+  function downloadFile(filename) {
+    // 실제 파일이 저장된 경로 설정
+    const fileUrl = '/path/to/files/' + filename;
+
+    // 동적으로 앵커 태그를 생성하여 다운로드 트리거
+    const link = document.createElement('a');
+    link.href = fileUrl;
+    link.download = filename;
+
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+  }
+
+
 </script>
 </html>
