--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>뉴오토정밀 - 제품소개</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/layout.css">
+    
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/product.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
@@ -184,7 +183,7 @@
                 <h2 class="visual_tit">제품소개</h2>
             </div>
         </section>
-        <section class="inner_content">
+        <section class="cont_box">
            <div class="section_inner">
                <!--  메뉴박스  -->
                <div class="content_tab_box">
