--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>뉴오토정밀 - 홍보센터</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/layout.css">
+    
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/pr_center.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
@@ -183,7 +182,7 @@
                 <h2 class="visual_tit">홍보센터</h2>
             </div>
         </section>
-        <section class="inner_content">
+        <section class="cont_box">
             <div class="section_inner">
                 <!--  메뉴박스  -->
                 <div class="content_tab_box">
